--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
         completions."
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="register_a_new_account_here">Register a new account here</string>
 </resources>
