--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
         completions."
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_thing_on_sale">thing_on_sale</string>
+    <string name="title_activity_selling_list">sellingList</string>
 </resources>
