做了上传商品详情页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_thing_on_sale">thing_on_sale</string>
     <string name="title_activity_selling_list">sellingList</string>
+    <string name="title_activity_sellan_item">SellanItem</string>
 </resources>
